cover description aligned, lots overlay done, about started, about left-column issues

--- a/styles/style.css
+++ b/styles/style.css
@@ -2,14 +2,6 @@ body {
     margin: 0;
 }
 
-/* .header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    /* если добавить align-items: center;, то лого становится большим 
-    margin: 92px 24px 96px; */
-
-
 .header {
     margin: 92px 24px 96px;
     display: grid;
@@ -34,7 +26,6 @@ body {
 
 .header__links-list-item_no-bullit {
     list-style-type: none;
-
 }
 
 .header__logo {
@@ -160,11 +151,14 @@ address {
     line-height: 28px;
     text-transform: uppercase;
     color: white;
-    width: 637px;
     height: 28px;
     margin-top: 667px;
     margin-left: 78px;
     
+}
+
+.cover_description-text-letter-spacing {
+    letter-spacing: 1.1em;
 }
 
 .bet-button {
@@ -181,6 +175,7 @@ address {
     width: 256px;
     height: 51px;
     margin-top: 655px;
+    margin-left: 79px;
     border: solid 1px white;
 }
 
@@ -213,16 +208,13 @@ address {
 .lots__card-list-item {
     width: 334px;
     height: 563px;
-
-/*top: 74px;
-gap: 0px;
-opacity: 0px;*/
-
+    position: relative;
 }
 
 .card {
     min-height: 100%;
-    width: auto;
+    position: relative;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -231,7 +223,6 @@ opacity: 0px;*/
     padding-right: 40px;
     padding-top: 51px;
     padding-bottom: 48px;
-    
 }
 
 .card_type_film {
@@ -260,6 +251,8 @@ opacity: 0px;*/
     position: absolute;
     width: 334px;
     height: 563px;
+    top: 0;
+    left: 0;
     background-color: rgb(0 0 0 / 0.6);
 }
 
@@ -271,6 +264,7 @@ opacity: 0px;*/
     text-transform: uppercase;
     text-align: left;
     color: white;
+    z-index: 2;
 }
 
 .card__text {
@@ -280,6 +274,7 @@ opacity: 0px;*/
     line-height: 24px;
     text-align: left;
     color: white;
+    z-index: 2;
 }
 
 
@@ -293,6 +288,62 @@ opacity: 0px;*/
     text-underline-offset: 5px;
 }
 
+.about {
+    width: 1052px;
+    margin-left: 24px;
+    margin-right: 24px;
+    margin-top: 146px;
+    margin-bottom: 180px;
+    display: grid;
+    grid-template-columns: 334px 1fr;
+}
+
+.about__column {
+    display: flex;
+    flex-direction: column;
+    justify-content: center
+}
+
+.about__logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: black;
+    border-radius: 50%;
+    width: 240px;
+    height: 240px;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+}
+
+.about__title {
+    margin-top: 136px;
+    margin-bottom: 100px;
+    padding-left: 23px;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 46.96px;
+    text-align: left;
+    text-transform: uppercase;
+}
+
+.about__text {
+    padding-left: 23px;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    text-align: left;
+    letter-spacing: 0.01em;
+
+}
+
+.about__text-gap {
+    letter-spacing: 0.01em;
+    margin-bottom: 25px;
+}
 
 .footer {
     display: flex;
@@ -301,7 +352,7 @@ opacity: 0px;*/
     margin: 180px 50px 88px;
 }
 
-.footer_contacts {
+.footer__contacts {
     display: flex;
     flex-direction: column;
     list-style: none;
